--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,6 @@
 	<string name="navigation_drawer_close">Close navigation drawer</string>
 	
 	<string name="action_settings">Settings</string>
-	<string name="menu_title_new_text">Новый текст</string>
-	<string name="menu_title_history">История</string>
 	<string name="hint_text_for_recognize">Текст для распознавания</string>
 	<string name="api_key">4978e60252ae102dfe1341146bb8cc3ec4bbbd78</string>
 	<string name="mode_json">json</string>
@@ -20,4 +18,6 @@
 	<string name="error_title_unknown_lang">Ошибка</string>
 	<string name="error_message_unknown_lang">Язык нераспознан</string>
 	<string name="history_is_empty">Истории нет</string>
+	<string name="title_history">История</string>
+	<string name="title_new_text">Новый текст</string>
 </resources>
